# pokeragents

./: .gitignore  README.md
app/: README.md  pyproject.toml
app/backend/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
app/backend/domain/: __init__.py
app/data/gamestates/: depricated_example_tournament(optimized)_20251210_144115_4f823373.json  example_tournament_20251210_112917_a9a8c27d.json  example_tournament_20251210_155621_3b7acb1f.json  example_tournament_20251210_165123_098acae4.json  manifest.json  tournament_20251210_170237_37e2d484.json  tournament_20251211_134314_eaf95838.json  tournament_20251211_135715_1b1ffc21.json  tournament_20251211_135839_26594d58.json  tournament_20251211_141044_58c6d16b.json  tournament_20251211_141915_34f151e8.json  tournament_20251211_142750_706c01c8.json  tournament_20251211_143752_f5c1d8b1.json  tournament_20251211_144910_34dc339d.json  tournament_20251211_145848_fd4c7cd5.json  tournament_20251211_150814_6b2ea8d0.json  tournament_20251211_153837_d93cf2fc.json  tournament_20251211_155122_9b873112.json  tournament_20251211_155517_df3434c5.json  tournament_20251211_161357_2707befd.json  tournament_20251214_162856_b83c8a2f.json  tournament_20251214_164941_3ed1e436.json  tournament_20251214_170822_bc5ee312.json  tournament_20251214_171650_41312d41.json  (+36 more)
app/docs/: EXPERIMENT.md
app/frontend/: README.md  vite.config.js
app/tests/: conftest.py  test_environment_elimination.py  test_ev_calculations.py  test_ev_edge_cases.py  test_file_lock.py  test_history_and_statistics.py  test_tournament_history_prompt.py
(+106 files in other folders)
