[project]
name = "poc-pokerbot"
version = "0.1.0"
description = "Poker AI agents POC using OpenAI Agents SDK - proves shared knowledge advantage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.15",
    "openai>=1.0.0",
    "pokerkit>=0.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]




